# basic-http-server

./: .gitignore  CMakeLists.txt  build.bat  conanfile.py  xmake.lua
src/: basic_http_server.cpp  basic_http_server.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  main.cpp  server.h  tcp_server.cpp  tcp_server.h  utils.cpp  utils.h
test_package/: conanfile.py
